--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <h2 onclick="speak('Salifu Tech Portfolio. Edited and credited to Karim Salifu ')">Salifu Tech Portfolio — Edited and credited to Salifu </h2>
 
   <div class="projects">
-    <button class="project-btn" onclick="window.open('https://plugfam-kappa.vercel.app//project1', '_blank'); speak('Project One')">Project One</button>
+    <button class="project-btn" onclick="window.open('https:// Metaai.com//project1', '_blank'); speak('Project One')">Project One</button>
     <button class="project-btn" onclick="window.open('https://example.com/project2', '_blank'); speak('Project Two')">Project Two</button>
     <button class="project-btn" onclick="window.open('https://example.com/project3', '_blank'); speak('Project Three')">Project Three</button>
     <button class="project-btn" onclick="window.open('https://example.com/project4', '_blank'); speak('Project Four')">Project Four</button>
