--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 
   <div class="projects">
     <button class="project-btn" onclick="window.open('https://udemy.com//project1', '_blank'); speak('Project One')">Project One</button>
-    <button class="project-btn" onclick="window.open('https://example.com/project2', '_blank'); speak('Project Two')">Project Two</button>
-    <button class="project-btn" onclick="window.open('https://example.com/project3', '_blank'); speak('Project Three')">Project Three</button>
-    <button class="project-btn" onclick="window.open('https://example.com/project4', '_blank'); speak('Project Four')">Project Four</button>
-    <button class="project-btn" onclick="window.open('https://example.com/project5', '_blank'); speak('Project Five')">Project Five</button>
-    <button class="project-btn" onclick="window.open('https://example.com/project6', '_blank'); speak('Project Six')">Project Six</button>
+    <button class="project-btn" onclick="window.open('https://alison.com/project2', '_blank'); speak('Project Two')">Project Two</button>
+    <button class="project-btn" onclick="window.open('https://study.com/project3', '_blank'); speak('Project Three')">Project Three</button>
+    <button class="project-btn" onclick="window.open('https://jumia.com.gh/project4', '_blank'); speak('Project Four')">Project Four</button>
+    <button class="project-btn" onclick="window.open('https://shopbeta.com.gh/project5', '_blank'); speak('Project Five')">Project Five</button>
+    <button class="project-btn" onclick="window.open('https://tinder.com/project6', '_blank'); speak('Project Six')">Project Six</button>
   </div>
 
   <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/group/your_Group_https://chat.whatsapp.com/HkAVfXUe0sZKBiMm7fB0GN', '_blank'); speak('Join WhatsApp Channel')">
