--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <button class="project-btn" onclick="window.open('https://tinder.com/project6', '_blank'); speak('Salifu Tech Project Six')">Dating site</button>
   </div>
 
-  <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/group/your_Group_https://chat.whatsapp.com/HkAVfXUe0sZKBiMm7fB0GN', '_blank'); speak('Join my Whatsapp group')">
-    WhatsApp Group 
+  <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/dl/code=U1lgIuNpQI', '_Direct to my whatsapp Dm'); speak('Contact me on Whatsapp')">
+    WhatsApp
   </button>
 
   <input type="range" min="0" max="1" step="0.01" value="1" class="volume-slider" id="volumeSlider" onchange="setVolume(this.value)">
