--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <button class="project-btn" onclick="window.open('https://moviebox.ng/project3', '_blank'); speak('Salifu Tech Project Three')">Free movies site </button>
     <button class="project-btn" onclick="window.open('https://crazygames.com.gh/project4', '_blank'); speak('Salifu Tech Project Four')">Games box</button>
     <button class="project-btn" onclick="window.open('https://shopbeta.com.gh/project5', '_blank'); speak('Salifu Tech Project Five')">Shopping site</button>
-    <button class="project-btn" onclick="window.open('https://tinder.com/project6', '_blank'); speak('Salifu Tech Project Six')">Dating site</button>
+    <button class="project-btn" onclick="window.open('https://tinywow.com/project6', '_blank'); speak('Salifu Tech Project Six')">Pdf tools</button>
   </div>
 
   <button class="whatsapp-btn" onclick="window.open('https://whatsapp.com/dl/code=U1lgIuNpQI', '_Direct to my whatsapp Dm'); speak('Contact me on Whatsapp')">
