--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       window.speechSynthesis.speak(msg);
     }
 
-    const text = "James Tech";
+    const text = "Salifu Tech";
     const typingElement = document.querySelector(".typing-text");
     let index = 0;
     function typeEffect() {
