--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <button class="project-btn" onclick="window.open('https://suno.com//project1', '_blank'); speak('Salifu Tech Project One')">AI music generator</button>
     <button class="project-btn" onclick="window.open('https://alison.com/project2', '_blank'); speak('Salifu Tech Project Two')">Study site</button>
     <button class="project-btn" onclick="window.open('https://moviebox.ng/project3', '_blank'); speak('Salifu Tech Project Three')">Free movies site </button>
-    <button class="project-btn" onclick="window.open('https://crazygames.com.gh/project4', '_blank'); speak('Salifu Tech Project Four')">Games box</button>
+    <button class="project-btn" onclick="window.open('https://crazygames.com/project4', '_blank'); speak('Salifu Tech Project Four')">Games box</button>
     <button class="project-btn" onclick="window.open('https://shopbeta.com.gh/project5', '_blank'); speak('Salifu Tech Project Five')">Shopping site</button>
     <button class="project-btn" onclick="window.open('https://tinywow.com/project6', '_blank'); speak('Salifu Tech Project Six')">Pdf tools</button>
   </div>
