--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       height: 100vh;
-      background: url('https://files.catbox.moe/ympiq5.jpg') no-repeat center center/cover;
+      background: url('https://files.catbox.moe/9eu0r8.jpg') no-repeat center center/cover;
       display: flex;
       justify-content: center;
       align-items: center;
