--- a/index.html
+++ b/index.html
@@ -179,13 +179,14 @@
   <img src="https://files.catbox.moe/fqghc8.jpg" alt="Salifu profile picture" class="profile-img" onclick="speak('James profile image')">
   <h1 class="typing-text" onclick="speak('Salifu Tech Support')"></h1>
   <h2 onclick="speak('Salifu Tech Portfolio. Edited and credited to Karim Salifu ')">Salifu Tech Portfolio — Edited and credited to Salifu </h2>
-
+<button class="project-btn" onclick="window.open('SALIFU PREMIUM APKS', '_blank'); speak('Salifu Tech Project Six')">Plugfam tools</button>
+</div>
   <div class="projects">
     <button class="project-btn" onclick="window.open('https://suno.com//project1', '_blank'); speak('Salifu Tech Project One')">AI music generator</button>
     <button class="project-btn" onclick="window.open('https://alison.com/project2', '_blank'); speak('Salifu Tech Project Two')">Study site</button>
     <button class="project-btn" onclick="window.open('https://moviebox.ng/project3', '_blank'); speak('Salifu Tech Project Three')">Free movies site </button>
     <button class="project-btn" onclick="window.open('https://crazygames.com/project4', '_blank'); speak('Salifu Tech Project Four')">Games box</button>
-    <button class="project-btn" onclick="window.open('https://shopbeta.com.gh/project5', '_blank'); speak('Salifu Tech Project Five')">Shopping site</button>
+    <button class="project-btn" onclick="window.open('https://jarmod.com.gh/project5', '_blank'); speak('Salifu Tech Project Five')">Free premium APKS</button>
     <button class="project-btn" onclick="window.open('https://tinywow.com/project6', '_blank'); speak('Salifu Tech Project Six')">Pdf tools</button>
   </div>
 
