--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   <img src="https://files.catbox.moe/fqghc8.jpg" alt="Salifu profile picture" class="profile-img" onclick="speak('James profile image')">
   <h1 class="typing-text" onclick="speak('Salifu Tech Support')"></h1>
   <h2 onclick="speak('Salifu Tech Portfolio. Edited and credited to Karim Salifu ')">Salifu Tech Portfolio — Edited and credited to Salifu </h2>
-<button class="project-btn" onclick="window.open('https://plugfam-kappa.vercel.app/', '_blank'); speak('Salifu Tech Project Six')">Plugfam tools</button>
+<button class="project-btn" onclick="window.open('https://plugfam-kappa.vercel.app/', '_blank'); speak('Salifu Tech AI tool')">Plugfam AI tools</button>
 </div>
   <div class="projects">
     <button class="project-btn" onclick="window.open('https://suno.com//project1', '_blank'); speak('Salifu Tech Project One')">AI music generator</button>
