--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <button class="project-btn" onclick="window.open('https://tinywow.com/project6', '_blank'); speak('Salifu Tech Project Six')">Pdf tools</button>
   </div>
 
-  <button class="whatsapp-btn" onclick="window.open('https://wa.me/qr/5FQWSK7V25RVB1', '_Direct to my whatsapp Dm'); speak('Contact me on Whatsapp')">
+  <button class="whatsapp-btn" onclick="window.open('https://wa.me/qr/5FQWSK7V25RVB1', '_Direct to my whatsapp Dm'); ('Contact me on Whatsapp')">
     WhatsApp
   </button>
 
