--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
   </style>
 </head>
 <body>
-  <img src="https://files.catbox.moe/fqghc8.jpg" alt="Salifu profile picture" class="profile-img" onclick="speak('James profile image')">
+  <img src="https://files.catbox.moe/fqghc8.jpg" alt="Salifu profile picture" class="profile-img" onclick="speak('Salifu profile image')">
   <h1 class="typing-text" onclick="speak('Salifu Tech Support')"></h1>
-  <h2 onclick="speak('Salifu Tech Portfolio. Edited and credited to Karim Salifu ')">Salifu Tech Portfolio — Edited and credited to Salifu </h2>
+  <h2 onclick="speak('Salifu Tech Portfolio. Edited and credited to KARIM SALIFU')">SALIFU TECH Portfolio — Edited and credited to SALIFU</h2>
 <button class="project-btn" onclick="window.open('https://plugfam-kappa.vercel.app/', '_blank'); speak('Salifu Tech Chatbot')">Plugfam Chatbot</button>
 </div>
   <div class="projects">
-    <button class="project-btn" onclick="window.open('https://suno.com//project1', '_blank'); speak('Salifu Tech Project One')">AI music generator</button>
-    <button class="project-btn" onclick="window.open('https://alison.com/project2', '_blank'); speak('Salifu Tech Project Two')">Study site</button>
-    <button class="project-btn" onclick="window.open('https://moviebox.ng/project3', '_blank'); speak('Salifu Tech Project Three')">Free movies site </button>
-    <button class="project-btn" onclick="window.open('https://crazygames.com/project4', '_blank'); speak('Salifu Tech Project Four')">Games box</button>
-    <button class="project-btn" onclick="window.open('https://jarmod.com/project5', '_blank'); speak('Salifu Tech Project Five')">Latest MOD APKs</button>
-    <button class="project-btn" onclick="window.open('https://tinywow.com/project6', '_blank'); speak('Salifu Tech Project Six')">Pdf tools</button>
+    <button class="project-btn" onclick="window.open('https://suno.com//project1', '_blank'); ('Salifu Tech Project One')">AI music generator</button>
+    <button class="project-btn" onclick="window.open('https://alison.com/project2', '_blank'); ('Salifu Tech Project Two')">Study site</button>
+    <button class="project-btn" onclick="window.open('https://moviebox.ng/project3', '_blank'); ('Salifu Tech Project Three')">Free movies site </button>
+    <button class="project-btn" onclick="window.open('https://crazygames.com/project4', '_blank'); ('Salifu Tech Project Four')">Games box</button>
+    <button class="project-btn" onclick="window.open('https://jarmod.com/project5', '_blank'); ('Salifu Tech Project Five')">Latest MOD APKs</button>
+    <button class="project-btn" onclick="window.open('https://tinywow.com/project6', '_blank'); ('Salifu Tech Project Six')">Pdf tools</button>
   </div>
 
   <button class="whatsapp-btn" onclick="window.open('https://wa.me/qr/5FQWSK7V25RVB1', '_Direct to my whatsapp Dm'); ('Contact me on Whatsapp')">
